Fix Button on small screen

--- a/client/styles.css
+++ b/client/styles.css
@@ -85,3 +85,10 @@ button:hover {
   position: relative;
   bottom: 25px;
 }
+
+@media (max-width: 513px) {
+  #sendBtn {
+    position: static;
+    bottom: auto;
+  }
+}
